Add Brave browser

--- a/playbook.yml
+++ b/playbook.yml
@@ -15,3 +15,4 @@
     - include: tasks/ssh.yml
     - include: tasks/core-setup.yml
     - include: tasks/git-setup.yml
+    - include: tasks/brave.yml
