--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -1,8 +1,12 @@
 - name: System packages
   become: true
   apt:
-    name: [ "python3", "python3-pip", "xorg", "xinit", "i3", "man-db", "git" ]
+    name: [ "python3", "python3-pip", "xorg", "xinit", "i3", "man-db", "git", "zsh", "zplug" ]
+  tags: test
 - name: Productivity tools
   become: true
   apt:
     name: [ "tmux", "fzf", "neovim" ]
+- name: Change to zsh
+  become: true
+  shell: chsh -s $(which zsh)
