--- a/playbook.yml
+++ b/playbook.yml
@@ -15,4 +15,5 @@
     - include: tasks/ssh.yml
     - include: tasks/core-setup.yml
     - include: tasks/git-setup.yml
+    - include: tasks/dotfiles.yml
     - include: tasks/brave.yml
