Do not install neovime from apt

--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -11,7 +11,7 @@
 - name: Productivity tools
   become: true
   apt:
-    name: [ "tmux", "fzf", "neovim" ]
+    name: [ "tmux", "fzf" ]
   tags: core
 - name: Change to zsh
   become: true
