feat: server tag

--- a/tasks/1password.yml
+++ b/tasks/1password.yml
@@ -2,10 +2,16 @@
   become: true
   apt:
     name: [ "gnupg2" ]
-  tags: 1password
+  tags:
+    - 1password
+    - station
 - name: Download latest 1password
   shell: cd ~/Downloads && wget -O 1password.deb downloads.1password.com/linux/debian/amd64/stable/1password-latest.deb
-  tags: 1password
+  tags:
+    - 1password
+    - station
 - name: Install 1password
   shell: cd ~/Downloads && sudo dpkg -i 1password.deb
-  tags: 1password
+  tags:
+    - 1password
+    - station
