--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -5,6 +5,7 @@
     state: directory
   tags:
     - ssh
+    - station
 - name: Install ssh key 
   copy:
     src: "{{ source_key }}"
@@ -12,6 +13,7 @@
     mode: 0600
   tags:
     - ssh
+    - station
 - name: Install ssh key public
   copy:
     src: "{{ source_key }}.pub"
@@ -19,6 +21,7 @@
     mode: 0644
   tags:
     - ssh
+    - station
 - name: Set authorized key took from file
   authorized_key:
     user: "{{ lookup('env', 'USER') }}"
@@ -28,4 +31,5 @@
       - "{{ lookup('env', 'HOME') }}/ssh/*.pub"
   tags:
     - ssh
+    - station
 
