--- a/tasks/obsidian.yml
+++ b/tasks/obsidian.yml
@@ -2,10 +2,16 @@
   become: true
   apt:
     name: [ "libsecret-1-0" ]
-  tags: obsidian
+  tags:
+    - obsidian
+    - station
 - name: Download latest obsidian
   shell: cd ~/Downloads && wget -O obsidian.deb $(curl -L api.github.com/repos/obsidianmd/obsidian-releases/releases/latest | jq ".assets[] | .browser_download_url" | tr -d '"' | grep deb$)
-  tags: obsidian
+  tags: 
+    - obsidian
+    - station
 - name: Install obsidian
   shell: cd ~/Downloads && sudo dpkg -i obsidian.deb
-  tags: obsidian
+  tags: 
+    - obsidian
+    - station
