--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -24,11 +24,11 @@
     - station
 - name: Set authorized key took from file
   authorized_key:
-    user: "{{ lookup('env', 'USER') }}"
+    user: ncko
     state: present
-    key: "{{ lookup('env', 'HOME') }}/ssh/id_rsa.pub"
-  with_fileglob:
-      - "{{ lookup('env', 'HOME') }}/ssh/*.pub"
+    key: '{{ item }}'
+  with_file:
+      - ssh/id_rsa.pub
   tags:
     - ssh
     - station
