Add tasks for cron

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,4 @@
-- hosts: proxmoxvms
+- hosts: '{{ ansible_limit | default(omit) }}'
   vars:
     source_key: "./ssh/id_rsa"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
@@ -20,4 +20,5 @@
     - include: tasks/obsidian.yml
     - include: tasks/1password.yml
     - include: tasks/neovim.yml
-    - include: tasks/node.yml
+    - include: tasks/cron.yml
+
