chore: in cron use ansible package over shell commands

--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -11,20 +11,22 @@
   tags:
     - cron
 - name: Install yarn
-  become: true
-  shell: npm install -g yarn
+  community.general.npm:
+    name: yarn
+    global: true
   tags:
     - cron
 - name: Install greensquares packages
-  shell: cd /home/ncko/projects/ncko/greensquares && yarn
+  community.general.yarn:
+    path: /home/ncko/projects/ncko/greensquares
   tags:
     - cron
 - name: Setup crontab for greensquares
   ansible.builtin.cron:
     name: "greensquares"
-    minute: "0"
+    minute: "13"
     hour: "5"
-    weekday: "1,2,3,4,5"
-    job: "cd /home/ncko/projects/ncko/greensquares/index.js && node index.js"
+    weekday: "0,1,2,3,4,5"
+    job: "cd /home/ncko/projects/ncko/greensquares && node index.js > /tmp/greensquares.log"
   tags:
     - cron
